--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
                 <!-- Menu items -->
                 <ul>
                     <li><a href=""><i class="fa-solid fa-house"></i> Home</a></li>
-                    <li><a href="../html/about.html"><i class="fa-regular fa-newspaper"></i> About</a></li>
-                    <li><a href="../html/project.html"><i class="fa-solid fa-star"></i> Project</a></li>
-                    <li><a href="../html/education.html"><i class="fa-brands fa-leanpub"></i> Education</a></li>
-                    <li><a href="../html/skills.html"><i class="fa-solid fa-code"></i> Skills</a></li>
-                    <li><a href="../html/contact.html"><i class="fa-solid fa-phone"></i> Contact</a></li>
+                    <li><a href="../profile/html/about.html"><i class="fa-regular fa-newspaper"></i> About</a></li>
+                    <li><a href="../profile/html/project.html"><i class="fa-solid fa-star"></i> Project</a></li>
+                    <li><a href="../profile/html/education.html"><i class="fa-brands fa-leanpub"></i> Education</a></li>
+                    <li><a href="../profile/html/skills.html"><i class="fa-solid fa-code"></i> Skills</a></li>
+                    <li><a href="../profile/html/contact.html"><i class="fa-solid fa-phone"></i> Contact</a></li>
                 </ul>
             </nav>
         </section>
@@ -65,7 +65,76 @@
         </section>
     </main>
 
-    <div id="footer"></div>
+    <footer>
+        <section class="row">
+            <div class="column">
+                <div class="footer-about">
+                    <h3>About Me</h3>
+                    <p>Hi, I'm Trương Ái Nga, a passionate web developer!</p>
+                    <p><i class="fas fa-phone"></i> +84 376 00 545</p>
+                    <p><i class="fas fa-envelope"></i> ainga01012004@gmail.com</p>
+                    <p class="contact">
+                        <a href="https://www.facebook.com/profile.php?id=100055585185477" target="_blank"><i
+                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/nga-trương-bb62202ab" target="_blank"><i
+                                class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://github.com/AiNga04" target="_blank"><i class="fa-brands fa-github"></i></a>
+                        <a href="https://trello.com/u/nga_dev" target="_blank"><i class="fa-brands fa-trello"></i></a>
+                        <a href="https://x.com/nga_dev_76" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://www.threads.net/@ainga_76" target="_blank"><i
+                                class="fa-brands fa-threads"></i></a>
+                        <a href="https://www.instagram.com/ainga_76" target="_blank"><i
+                                class="fa-brands fa-instagram"></i></a>
+                    </p>
+                    <form action="mailto:ainga01012004@gmail.com" method="POST" enctype="text/plain">
+                        <input type="email" name="email" placeholder="Enter your e-mail" required>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+            <div class="column">
+                <div class="footer-address">
+                    <h3>Address</h3>
+                    <a href="https://maps.app.goo.gl/LKk9eR9o1LsUBxTz6" target="_blank">
+                        <p class="desc">Location: 484 Lê Văn Việt, Tăng Nhơn Phú A, Quận 9, Hồ Chí Minh</p>
+                    </a>
+                    <p class="desc">By Public Transport: Take Bus 55, 56, 141 and get off at Lê Văn Việt Stop.</p>
+
+                    <!-- <p class="desc">By Motorbike: There is parking available at the building. Entrance is on the right side.
+                    </p> -->
+                    <div class="map-container">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.55596002732!2d106.7967441!3d10.845253600000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175273e5b95f75d%3A0x774a073b596e07ab!2zNDg0IEzDqiBWxINuIFZp4buHdCwgVMSDbmcgTmjGoW4gUGjDuiBBLCBRdeG6rW4gOSwgSOG7kyBDaMOtIE1pbmg!5e0!3m2!1svi!2s!4v1734239940339!5m2!1svi!2s"
+                            width="100%" height="260" style="border:1;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="footer-portfolio">
+                    <h3>Gallery</h3>
+                    <div class="row">
+                        <div class="col-4">
+                            <img src="./img/img-1.jpg" alt="Img 1">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/img-5.jpg" alt="Img 2">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/img-3.jpg" alt="Img 3">
+                        </div>
+                        <div class="col-4">
+                            <img src="./img/img-6.jpg" alt="Img 4">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <hr>
+            <p class="desc-foot">&copy; 2024 Ai Nga. All rights reserved.</p>
+        </section>
+    </footer>
 
     <script src="./assets/js/add-main.js"></script>
     <script src="./assets/js/main.js"></script>
