--- a/html/project.html
+++ b/html/project.html
@@ -32,11 +32,11 @@
             <!-- Menu items -->
             <ul>
                 <li><a href=""><i class="fa-solid fa-house"></i> Home</a></li>
-                <li><a href="../html/about.html"><i class="fa-regular fa-newspaper"></i> About</a></li>
-                <li><a href="../html/project.html"><i class="fa-solid fa-star"></i> Project</a></li>
-                <li><a href="../html/education.html"><i class="fa-brands fa-leanpub"></i> Education</a></li>
-                <li><a href="../html/skills.html"><i class="fa-solid fa-code"></i> Skills</a></li>
-                <li><a href="../html/contact.html"><i class="fa-solid fa-phone"></i> Contact</a></li>
+                <li><a href="../../profile/html/about.html"><i class="fa-regular fa-newspaper"></i> About</a></li>
+                <li><a href="../../profile/html/project.html"><i class="fa-solid fa-star"></i> Project</a></li>
+                <li><a href="../../profile/html/education.html"><i class="fa-brands fa-leanpub"></i> Education</a></li>
+                <li><a href="../../profile/html/skills.html"><i class="fa-solid fa-code"></i> Skills</a></li>
+                <li><a href="../../profile/html/contact.html"><i class="fa-solid fa-phone"></i> Contact</a></li>
             </ul>
         </nav>
     </section>
