--- a/html/skills.html
+++ b/html/skills.html
@@ -32,7 +32,7 @@
 
                 <!-- Menu items -->
                 <ul>
-                    <li><a href=""><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li><a href="../../profile/index.html"><i class="fa-solid fa-house"></i> Home</a></li>
                     <li><a href="../../profile/html/about.html"><i class="fa-regular fa-newspaper"></i> About</a></li>
                     <li><a href="../../profile/html/project.html"><i class="fa-solid fa-star"></i> Project</a></li>
                     <li><a href="../../profile/html/education.html"><i class="fa-brands fa-leanpub"></i> Education</a>
